--- a/module_3/M3_NB1_BSSID.ipynb
+++ b/module_3/M3_NB1_BSSID.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "Typically, in any analysis, you will start with an idea that you need to validate. In the video content of this module, Arek Stopczynski suggests that you test ideas on yourself first, as this is the easiest way to validate your assumptions about the data generated. As a result, you will be able to quickly spot anomalies based on your understanding of your own behavior and patterns. Once you have a functional data set and hypothesis, you should also start to consider cases where the behaviors of others do not necessarily align to your own.\n",
     "\n",
-    "In many cases the data is reviewed manually. When performing an analysis, you need to validate all of your assumptions, and be able to logically describe what you want to do, before selecting a method of execution. In some cases, the functions you utilize may behave in unexpected ways. Therefore, you need to constantly perform checks to ensure that the output values are correct and as expected. Pandas is a tried-and-tested library with a large following of loyal users. However, this does not necessarily extend to other libraries you may come across."
+    "In many cases the data is reviewed manually. When performing an analysis, you need to validate all of your assumptions, and be able to logically describe what you want to do, before selecting a method of execution. In some cases, the functions you utilize may behave in unexpected ways. Therefore, you need to constantly perform checks to ensure that the output values are correct and as expected. Pandas is a widely used and popular library that is actively supported today by a community of dedicated developers and loyal users. However, this does not necessarily extend to other libraries you may come across."
    ]
   },
   {
@@ -161,7 +161,7 @@
     "\n",
     "> * Epochtime format can be parsed with the Pandas ``to_datetime`` function, as demonstrated in Section 1 of Module 2's Notebook 2.\n",
     "\n",
-    "The first example will only look at the BSSID, while subsequent examples will also look at the timestamp. Students who have previously worked with BSSIDs will notice the lack of an SSID: the network name. This was removed by the Dartmouth researchers prior to the release of the data set due to institutional security concerns. While it could be argued that this is one of the most useful pieces of information, your analysis does not require this feature."
+    "The first example will only look at the BSSID, while subsequent examples will also look at the timestamp. Students who have previously worked with BSSIDs will notice the lack of an SSID: the network name. This was removed by the Dartmouth researchers prior to the release of the data set due to institutional security concerns. While it could be argued that this is one of the most useful pieces of information, your analytical tasks in this course do not require this feature."
    ]
   },
   {
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Total number of rows:\\n{}'.format(len(user00)))"
+    "print('Total number of rows:\\n{}'.format(user00.shape[0]))"
    ]
   },
   {
@@ -247,8 +247,7 @@
    "metadata": {},
    "source": [
     "#### 1.4 Data validation\n",
-    "As you can see from the first few lines of the data, the epochtime format is not very useful when trying to review datetimes. In the cell below,  use the Pandas \"to_datetime()\" function to convert the epochtime into a format humans can easily understand.\n",
-    "Panda's default output from \"to_datetime\" is in units of milliseconds, which will need to be changed to seconds. To do this, set the optional argument \"unit\" to seconds to produce the desired output, that is, \"`unit='s'`\"."
+    "As you can see from the first few lines of the data, the epochtime format is not very useful when trying to review datetimes. In the cell below, you are going to use the Pandas \"to_datetime()\" function to convert the epochtime into a format humans can easily understand. Panda's default output from \"to_datetime\" is in units of milliseconds, which will need to be changed to seconds. To do this, set the optional argument \"unit\" to seconds to produce the desired output, that is, \"`unit='s'`\"."
    ]
   },
   {
@@ -287,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can use the \"`print()`\" command to display the maximum and minimum times in the new data set. Notice that, by adding \".min()\" or \".max()\" after \"readable_time\", Python will apply the method to find these values, and print them in place of {}, which is used for string formatting. The \"`.format`\" function takes as many arguments as there are {}'s – in this case, 2."
+    "You can use the \"`print()`\" command to display the maximum and minimum times in the new data set. Notice that, by adding \".min()\" or \".max()\" after \"readable_time\", Python will apply the method to find these values, and print them in place of {}, which is used for string formatting. The \".format\" function takes as many arguments as there are {} pairs – in this case, 2."
    ]
   },
   {
@@ -315,7 +314,9 @@
    "metadata": {},
    "source": [
     "Next, use the Pandas \"`value_counts()`\" method to find the counts of unique values for observed frequencies in the converted data set. The full syntax for the \"value_counts\" method is:\n",
-    "> `Series.value_counts(normalize=False, sort=True, ascending=False, bins=None, dropna=True)`"
+    "> `Series.value_counts(normalize=False, sort=True, ascending=False, bins=None, dropna=True)`\n",
+    "\n",
+    "where Series is a Pandas series object, that is, a single column from a DataFrame object."
    ]
   },
   {
@@ -452,22 +453,13 @@
     "- Download a copy of the notebook in \".ipynb\" format to your local machine using \"File\", \"Download as\", and \"IPython Notebook (.ipynb)\"; and\n",
     "- Submit a copy of this file to the Online Campus."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
