--- a/module_3/M3_NB3_GeotaggingWiFiAP.ipynb
+++ b/module_3/M3_NB3_GeotaggingWiFiAP.ipynb
@@ -299,7 +299,7 @@
    "source": [
     "> **Note**:\n",
     "\n",
-    "> For certain methods, Pandas has the option of applying changes to data sets \"inplace\". While convenient, you will no longer be able to re-execute earlier cells and this feature should be used with care. The guiding principle is that you can use this feature in data cleaning and wrangling steps, where you no longer need to go back and revisit earlier steps.\n",
+    "> For certain methods, Pandas has the option of applying changes to data sets \"inplace\". While convenient, this feature should be used with care as you will no longer be able to re-execute earlier cells. The guiding principle is that you can use this feature in data cleaning and wrangling steps, where you no longer need to go back and revisit earlier steps.\n",
     "\n",
     "> Should you need to revisit earlier steps, you can either restart the notebook and execute all the cells up to that point, or only execute the cells needed to get the object in the required form to continue your analysis."
    ]
@@ -531,29 +531,23 @@
    "source": [
     "> **Note**:\n",
     "\n",
-    "> In order to validate your results, you can perform a \"rough\" check of validity by using the Google location API, which utilizes their own WiFi positioning. Set \"bssid1\" and \"bssid2\" to actual MAC addresses of two routers located near each other to determine the location of a user."
+    "> In order to validate your results, you can compare the location with the known location (lat: 43.7068263, long:-72.2868704)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Import additional library and set access points to review.\n",
-    "import requests\n",
+    "# Set the provided location.\n",
+    "lat = 43.7068263\n",
+    "lon = -72.2868704\n",
+    "\n",
     "bssid1 = '00:01:36:57:be:88'\n",
-    "bssid2 = '00:01:36:57:be:87'\n",
-    "\n",
-    "# Use the Google API to return the geocoded location of the user location.\n",
-    "url = 'https://maps.googleapis.com/maps/api/browserlocation/json?browser=' \\\n",
-    "            'chrome&sensor=true&wifi=mac:{}&wifi=mac:{}'.format(bssid1, bssid2)\n",
-    "\n",
-    "# Save the response of the API call.\n",
-    "response = requests.post(url)\n",
-    "\n",
-    "# Print the response.\n",
-    "print(response.json()['location'])"
+    "bssid2 = '00:01:36:57:be:87'"
    ]
   },
   {
@@ -588,8 +582,6 @@
     "# Calculate and display the difference between calculated and Google API provided locations.\n",
     "lat_m1, lon_m1 = u00_geo_medians.loc[bssid1]\n",
     "lat_m2, lon_m2 = u00_geo_medians.loc[bssid2]\n",
-    "\n",
-    "lat, lon = response.json()['location'].values()\n",
     "\n",
     "print('Distance from the Google API provided location to our first router ' \\\n",
     "            'estimation is {:2g}m'.format(haversine(lon,lat,lon_m1,lat_m1)*1000))\n",
@@ -980,23 +972,14 @@
     "## 4. References\n",
     "Sapieżyński, Piotr, Radu Gatej, Alan Mislove, and Sune Lehmann. 2015. “Opportunities and Challenges in Crowdsourced Wardriving.” Proceedings of the 2015 ACM Conference on Internet Measurement Conference."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
