--- a/module_4/M4_NB1_NetworkX_Introduction.ipynb
+++ b/module_4/M4_NB1_NetworkX_Introduction.ipynb
@@ -61,10 +61,9 @@
     "\n",
     "Here are some additional links that will provide you with solid foundational knowledge of NetworkX:\n",
     "\n",
-    "- [NetworkX documentation](http://networkx.readthedocs.io/en/networkx-1.11/)\n",
-    "- [NetworkX quick example](https://networkx.github.io/examples.html)\n",
-    "- [NetworkX examples](http://networkx.readthedocs.io/en/networkx-1.11/examples/)\n",
-    "- [NetworkX tutorial](http://networkx.readthedocs.io/en/networkx-1.11/tutorial/)\n"
+    "- [NetworkX documentation](https://networkx.github.io/documentation/stable/)\n",
+    "- [NetworkX examples](https://networkx.github.io/documentation/stable/examples/index.html)\n",
+    "- [NetworkX tutorial](https://networkx.github.io/documentation/stable/tutorial/index.html)"
    ]
   },
   {
@@ -205,7 +204,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pydot(G)"
@@ -275,7 +276,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Visualize the graph object.\n",
@@ -285,7 +288,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Visualize the graph object, including weight information.\n",
@@ -367,7 +372,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# List the nodes in your graph object.\n",
@@ -377,7 +384,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# How many nodes are contained within your graph model?\n",
@@ -387,7 +396,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Alternative method for getting the number nodes.\n",
@@ -404,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# List the edges in the graph object.\n",
@@ -414,7 +427,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# How many edges do you have? \n",
@@ -424,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Alternative method for getting number of edges.\n",
@@ -442,7 +459,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "G.get_edge_data(*G.edges()[0])"
@@ -460,7 +479,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for n1,n2,attr in G.edges(data=True):\n",
@@ -478,7 +499,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "G.neighbors('x')"
@@ -494,7 +517,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for node in G.nodes():\n",
@@ -561,7 +586,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Trying to remove a node not in the graph raises an error.\n",
@@ -623,7 +650,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot one of the small, famous graphs.\n",
@@ -656,6 +685,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -689,7 +719,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot one of the random graphs.\n",
@@ -859,7 +891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
