--- a/module_4/M4_NB2_PeerNetworkAnalysis.ipynb
+++ b/module_4/M4_NB2_PeerNetworkAnalysis.ipynb
@@ -168,7 +168,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Read the CallLog.csv file, print the number of records loaded as well as the first 5 rows.\n",
@@ -189,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Initial number of records.\n",
@@ -206,7 +210,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "calls.info()"
@@ -222,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Drop rows with NaN in either of the participant ID columns.\n",
@@ -262,7 +270,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Get a list of rows with different participants.\n",
@@ -311,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Print the number of nodes in our network.\n",
@@ -363,7 +375,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(ndict)"
@@ -372,11 +386,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Print only the first item in the dict.\n",
-    "# print([ndict.keys()[0], ndict[ndict.keys()[0]]]) # Original, check and remove\n",
     "print([list(ndict)[0], ndict[list(ndict)[0]]])"
    ]
   },
@@ -392,7 +407,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Get the count of interactions between participants and display the top 5 rows.\n",
@@ -467,7 +484,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Print a sample of the edges, with corresponding attribute data.\n",
@@ -490,7 +509,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Verify our attribute data is correct using a selected (u,v) pair from the data.\n",
@@ -504,7 +525,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Compare our data set to the interactions data set.\n",
@@ -584,30 +607,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pos = graphviz_layout(G, prog='dot') # you can also try using the \"neato\" engine\n",
-    "nx.draw(G,pos=pos)"
+    "nx.draw_networkx(G, pos=pos, with_labels=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.3.2 Graph visualization using NetworlX's in-built \"spring layout\""
+    "#### 1.3.2 Graph visualization using NetworkX's in-built \"spring layout\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "layout = nx.spring_layout(G)\n",
-    "nx.draw(G, pos=layout, node_color='green')"
+    "nx.draw_networkx(G, pos=layout, node_color='green', with_labels=False)"
    ]
   },
   {
@@ -620,7 +646,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pydot(G)"
@@ -785,7 +813,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot the degree distribution histogram.\n",
@@ -808,7 +838,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Logarithmic plot of the degree distribution.\n",
@@ -862,14 +894,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot degree centrality.\n",
     "call_degree_centrality = nx.degree_centrality(G)\n",
     "colors =[call_degree_centrality[node] for node in G.nodes()]\n",
     "pos = graphviz_layout(G, prog='dot')\n",
-    "nx.draw(G, pos, node_color=colors, node_size=300)"
+    "nx.draw_networkx(G, pos, node_color=colors, node_size=300, with_labels=False)"
    ]
   },
   {
@@ -913,7 +947,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Top 5 participants with the highest degree centrality measure.\n",
@@ -934,7 +970,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Number of unique actors associated with each of the five participants with highest degree centrality measure.\n",
@@ -945,7 +983,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Total call interactions are associated with each of these five participants with highest degree centrality measure.\n",
@@ -966,14 +1006,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot closeness centrality.\n",
     "call_closeness_centrality = nx.closeness_centrality(G)\n",
     "colors = [call_closeness_centrality[node] for node in G.nodes()]\n",
     "pos = graphviz_layout(G, prog='dot')\n",
-    "nx.draw(G, pos=pos,node_color=colors)"
+    "nx.draw_networkx(G, pos=pos,node_color=colors, with_labels=False)"
    ]
   },
   {
@@ -1007,7 +1049,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Top 5 participants with the highest closeness centrality measure.\n",
@@ -1024,14 +1068,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot betweenness centrality.\n",
     "call_betweenness_centrality = nx.betweenness_centrality(G)\n",
     "colors =[call_betweenness_centrality[node] for node in G.nodes()]\n",
     "pos = graphviz_layout(G, prog='dot')\n",
-    "nx.draw(G, pos=pos, node_color=colors)"
+    "nx.draw_networkx(G, pos=pos, node_color=colors, with_labels=False)"
    ]
   },
   {
@@ -1063,7 +1109,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Top 5 participants with the highest betweenness centrality measure.\n",
@@ -1087,14 +1135,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot eigenvector centrality.\n",
     "call_eigenvector_centrality = nx.eigenvector_centrality(G)\n",
     "colors = [call_eigenvector_centrality[node] for node in G.nodes()]\n",
     "pos = graphviz_layout(G, prog='dot')\n",
-    "nx.draw(G, pos=pos, node_color=colors)"
+    "nx.draw_networkx(G, pos=pos, node_color=colors,with_labels=False)"
    ]
   },
   {
@@ -1124,7 +1174,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Top 5 participants with the highest eigenvector centrality measure. \n",
@@ -1211,6 +1263,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -1229,7 +1282,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Make a (deep) copy of the graph; we work on the copy.\n",
@@ -1259,7 +1314,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m1 = pd.merge(df_call_btn_centrality_sorted, df_call_clo_centrality_sorted)\n",
@@ -1364,7 +1421,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('Diameter {}'.format(nx.diameter(G)))\n",
@@ -1395,7 +1454,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('The global clustering for our graph G is {0:.4f}'.format(nx.transitivity(G)))"
@@ -1413,7 +1474,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a graph object from a provided edges list and visualize the graph. \n",
@@ -1421,7 +1484,7 @@
     "g =  nx.Graph()\n",
     "g.add_edges_from(e)\n",
     "pos = graphviz_layout(g, prog='dot')\n",
-    "nx.draw(g, pos=pos, with_labels=True, node_size=500)"
+    "nx.draw_networkx(g, pos=pos, with_labels=True, node_size=500)"
    ]
   },
   {
@@ -1434,7 +1497,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Number of actual edges there are between neigbhors of 5. \n",
@@ -1464,7 +1529,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Local clustering for node 5\n",
@@ -1481,7 +1548,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nx.clustering(g)"
@@ -1497,7 +1566,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Compute average clustering coefficient for our graph g directly.\n",
@@ -1554,7 +1625,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Effect of removing weakly connected nodes.\n",
@@ -1685,6 +1758,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1709,7 +1783,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Compare 'L.actual' to 'L.random' to return a Boolean based on the above\n",
@@ -1727,7 +1803,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tbl['C.actual gt C.random'] = tbl['C.actual'] > tbl['C.random']\n",
@@ -1862,7 +1940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
