--- a/module_4/M4_NB3_NetworkClustering.ipynb
+++ b/module_4/M4_NB3_NetworkClustering.ipynb
@@ -133,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Display call graph object.\n",
@@ -142,7 +144,7 @@
     "\n",
     "#pos = nx.spring_layout(call_graph)\n",
     "pos = graphviz_layout(call_graph, prog='dot')\n",
-    "nx.draw(call_graph, pos=pos, node_color='#11DD11')"
+    "nx.draw_networkx(call_graph, pos=pos, node_color='#11DD11', with_labels=False)"
    ]
   },
   {
@@ -240,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hierarchy.dendrogram(Z)\n",
@@ -272,7 +276,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.plot(range(1, len(Z)+1), Z[::-1, 2])\n",
@@ -298,7 +304,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "num_clust1, num_clust2, num_clust3"
@@ -314,7 +322,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "opt_clust = round(1.0/3*(num_clust1+num_clust2+num_clust3))\n",
@@ -349,7 +359,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.axis('off')\n",
@@ -509,7 +521,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pos = graphviz_layout(call_graph, prog='dot')\n",
@@ -529,7 +543,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# View the contents of the louvain_partition variable.\n",
@@ -581,7 +597,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pos = graphviz_layout(call_graph, prog='dot')\n",
@@ -594,7 +612,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(spectral_partition)"
@@ -690,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
