--- a/module_5/M5_NB1_BandicootIntroduction.ipynb
+++ b/module_5/M5_NB1_BandicootIntroduction.ipynb
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, review the content of the text file containing the records using the “bash” command head. This function has been demonstrated in earlier notebooks, and it is extremely useful when you need to get a quick view of a data set without loading it into your analysis environment. Should the contents prove useful, you can load it as a DataFrame."
+    "First, review the content of the text file containing the records using the bash (command line) command, \"head\". This function has been demonstrated in earlier notebooks, and it is extremely useful when you need to get a quick view of a data set without loading it into your analysis environment. Should the contents prove useful, you can load it as a DataFrame."
    ]
   },
   {
@@ -228,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Add a field that contains the week number corresponding to a call record. \n",
@@ -247,7 +249,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Retrieve the bins (weeks).\n",
@@ -264,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print (\"The average weekly call duration for the user is {:.3f}, while the average weekly standard deviation is {:.3f}.\"\n",
@@ -281,7 +287,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "weekly_averages.describe()"
@@ -314,7 +322,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "B = bc.read_csv(user_id, '../data/bandicoot/clean_records/', '../data/bandicoot/antennas.csv')"
@@ -342,7 +352,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Calculate the call_duration summary statistics using Bandicoot.\n",
@@ -370,7 +382,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bc.individual.call_duration(B, groupby='day', interaction='call', summary='extended')"
@@ -445,7 +459,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use bandicoot to split the records by day.\n",
@@ -455,7 +471,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot the results. The mean is plotted as a barplot, with the std deviation as an error bar.\n",
@@ -483,6 +501,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -514,7 +533,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Active days.\n",
@@ -543,7 +564,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Number of contacts. \n",
@@ -565,7 +588,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bc.utils.all(B)"
@@ -596,6 +621,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Your code here."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -621,7 +657,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import the relevant libraries.\n",
@@ -673,7 +711,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Specify the network folder containing all the data.\n",
@@ -706,7 +746,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Index of the adjacency matrix - user_ids participating in the network.\n",
@@ -731,7 +773,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Directed unweighted matrix.\n",
@@ -742,7 +786,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Undirected weighted matrix.\n",
@@ -763,7 +809,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bc.network.assortativity_attributes(BN)['gender']"
@@ -868,12 +916,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot the graph.\n",
     "layout = nx.spring_layout(G_directed_unweighted)\n",
-    "nx.draw(G_directed_unweighted, layout, node_color='blue', alpha=0.4, node_size=2000)\n",
+    "nx.draw_networkx(G_directed_unweighted, layout, node_color='blue', alpha=0.4, node_size=2000)\n",
     "_ = nx.draw_networkx_labels(G_directed_unweighted, layout, node_labels)"
    ]
   },
@@ -889,12 +939,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot the graph.\n",
     "layout = nx.spring_layout(G_directed_unweighted)\n",
-    "nx.draw(G_undirected_weighted, layout, node_color='blue', alpha=0.4, node_size=2000)\n",
+    "nx.draw_networkx(G_undirected_weighted, layout, node_color='blue', alpha=0.4, node_size=2000)\n",
     "_ = nx.draw_networkx_labels(G_undirected_weighted, layout, node_labels)"
    ]
   },
@@ -920,8 +972,8 @@
     "2. Remove faulty records; and\n",
     "3. Report on more than 30 variables (such as the number of contacts, types of records, records containing location), warning you of potential issues when exporting indicators.\n",
     "\n",
-    "## 5.1 Bandicoot csv import\n",
-    "Importing csv files with Bandicoot will produce warnings about:\n",
+    "## 5.1 Bandicoot CSV import\n",
+    "Importing CSV files with Bandicoot will produce warnings about:\n",
     "\n",
     "1. No files containing data being found in the specified path;\n",
     "2. The percentage of records missing location information;\n",
@@ -955,7 +1007,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "errors = bc.read_csv(error_user_id, records_with_errors_path )"
@@ -978,7 +1032,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "errors.ignored_records"
@@ -999,6 +1055,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1054,6 +1111,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1107,7 +1165,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bc.io.to_csv(features, 'all_features.csv')"
@@ -1137,7 +1197,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Display the length or number of users with in the features list.\n",
@@ -1148,6 +1210,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1160,7 +1223,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Print the various groups of behavioral indicators (and attributes) that are available for each user.\n",
@@ -1220,7 +1285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
