--- a/module_5/M5_NB2_BandicootMachineLearning.ipynb
+++ b/module_5/M5_NB2_BandicootMachineLearning.ipynb
@@ -134,7 +134,7 @@
     "\n",
     "\n",
     "\n",
-    "You are encouraged to visit and read Scikit-learn’s [practical advice on machine learning](http://www.astroml.org/sklearn_tutorial/practical.html), with special regard to the summary section.\n",
+    "You are encouraged to visit and read Scikit-learn’s [practical advice on machine learning](https://ogrisel.github.io/scikit-learn.org/sklearn-tutorial/tutorial/astronomy/practical.html), with special regard to the summary section.\n",
     "\n",
     "\n",
     "<img src=\"biasvariance.png\", width=400, height=450>\n",
@@ -178,7 +178,7 @@
     "> **Hint**: \n",
     "- Review [this article](http://www.ma.utexas.edu/users/mks/statmistakes/ovefitting.html) for additional information on overfitting.\n",
     "- Review [this post](http://machinelearningmastery.com/gentle-introduction-to-the-bias-variance-trade-off-in-machine-learning/) for additional information on the bias-variance trade-off.\n",
-    "- Review Tomasz Malisiewicz's notes from Andrew Ng's NIPS tutorial on the [Nuts and Bolts of Building Deep Learning Applications](http://www.computervisionblog.com/2016/12/nuts-and-bolts-of-building-deep.html) for a suggested recipe on bulding machine learning systems.\n"
+    "- Review Tomasz Malisiewicz's notes from Andrew Ng's NIPS tutorial on the [Nuts and Bolts of Building Deep Learning Applications](http://www.computervisionblog.com/2016/12/nuts-and-bolts-of-building-deep.html) for a suggested recipe on building machine learning systems.\n"
    ]
   },
   {
@@ -308,7 +308,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Read all the csv files in the in \"./data-fnf/records\" directory.\n",
@@ -334,6 +336,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -373,7 +376,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%run plot_iris2d.py"
@@ -389,7 +394,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# A demonstration of classification using linear and nonlinear algorithms.\n",
@@ -448,7 +455,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot both segments.\n",
@@ -478,6 +487,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -541,7 +551,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Review the target or response variable.\n",
@@ -559,7 +571,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Convert gender labels to binary values (zero or one):\n",
@@ -614,7 +628,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Assign predictors to a variable of ndarray (matrix) type .\n",
@@ -654,7 +670,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X"
@@ -732,7 +750,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "correlation_matrix(pd.DataFrame(np.c_[Xs,y]))"
@@ -753,7 +773,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ycorr.xycor.plot(kind='line')"
@@ -781,7 +803,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 5. Divide records in training and testing sets.\n",
@@ -806,7 +830,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Get average of 3-fold cross-validation score using an SVC estimator.\n",
@@ -839,7 +865,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(scores)\n",
@@ -900,7 +928,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# The confusion matrix helps visualize the performance of the algorithm.\n",
@@ -913,7 +943,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot the receiver operating characteristic curve (ROC).\n",
@@ -1040,7 +1072,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Train classifiers.\n",
@@ -1052,7 +1086,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"The best parameters are %s with a score of %0.2f\"\n",
@@ -1074,7 +1110,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_pred = clf.fit(X_train, y_train).predict(X_test)\n",
@@ -1103,7 +1141,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create an instance of random forest classifier, fit the data, and assess performance on test data.\n",
@@ -1120,7 +1160,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create an instance of logistic regression classifier, fit the data, and assess performance on test data.\n",
@@ -1137,7 +1179,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create an instance of decision tree classifier, fit the data, and assess performance on test data.\n",
@@ -1154,7 +1198,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create an instance of multilayer perceptron classifier (gradient descent), fit the data, and assess performance on test data.\n",
@@ -1166,7 +1212,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create an instance of multilayer perceptron classifier (stochastic gradient descent), fit the data, and assess performance on test data.\n",
@@ -1178,7 +1226,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot the results.\n",
@@ -1349,7 +1399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   },
   "toc": {
    "toc_cell": false,
