--- a/module_6/M6_NB1_Projects.ipynb
+++ b/module_6/M6_NB1_Projects.ipynb
@@ -68,6 +68,12 @@
     "\n",
     "<div class=\"alert alert-warning\">\n",
     "<b>Note</b>:<br>This week’s notebooks will touch on various aspects of big data projects in general, and provide technical considerations to keep in mind. The Module 7 notebooks will focus on the abovementioned study by Aharony et al., and its results.\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "<div class=\"alert alert-warning\">\n",
+    "<b>Note</b>:<br>\n",
+    "It is strongly recommended that you save and checkpoint after applying significant changes or completing exercises. This allows you to return the notebook to a previous state should you wish to do so. On the Jupyter menu, select \"File\", then \"Save and Checkpoint\" from the dropdown menu that appears.\n",
     "</div>"
    ]
   },
@@ -237,7 +243,7 @@
     "The paper describes the methodology employed in detail. When embarking on your journey, there will be additional items to consider which typically do not make it into the final research paper or the final product. Some of these items (which are outside of the scope of the course) are included here for your consideration.\n",
     "\n",
     "## 6.1 Data collection\n",
-    "In the video content, earlier in the course, Arek Stopczynski referred to data collection as being expensive. Carefully review the data sources already available, as well as potential new sources of data. You will need to balance the need for trusted, high-accuracy data or low-grain data with the costs and overheads associated with obtaining the data. In many cases, your pilot project will focus on easier-to-obtain data, and you may need to use proxies or subsets of data to demonstrate the usefulness of the concept being studied. Many of the questions that you will need to answer may potentially be answered using a small subset of data (this concept is known as the [Pareto principle](http://www.investopedia.com/terms/p/paretoprinciple.asp). There would typically be a number of use cases for the same set of data. Think of social network data. While many organizations, or units within organizations, are excited about the prospect of using this rich source of data, few are able to obtain value from it.\n",
+    "In the video content, earlier in the course, Arek Stopczynski referred to data collection as being expensive. Carefully review the data sources already available, as well as potential new sources of data. You will need to balance the need for trusted, high-accuracy data or low-grain data with the costs and overheads associated with obtaining the data. In many cases, your pilot project will focus on easier-to-obtain data, and you may need to use proxies or subsets of data to demonstrate the usefulness of the concept being studied. Many of the questions that you will need to answer may potentially be answered using a small subset of data (this concept is known as the [Pareto principle](http://www.investopedia.com/terms/p/paretoprinciple.asp)). There would typically be a number of use cases for the same set of data. Think of social network data. While many organizations, or units within organizations, are excited about the prospect of using this rich source of data, few are able to obtain value from it.\n",
     "\n",
     "## 6.2 Data preparation\n",
     "Data preparation can be a tedious process, and typically requires more time than is budgeted for. Accelerators aid in transformation, and the governance of data can help you to reduce ongoing required efforts. When thinking about the creation of data products or implementing production systems, you should typically want to automate these steps, in order to free up capacity of your data scientists, ensuring that they can spend their time on useful tasks rather than repetitive ones.\n",
@@ -472,9 +478,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -486,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   },
   "nbpresent": {
    "slides": {
