--- a/module_6/M6_NB2_Privacy_by_Design.ipynb
+++ b/module_6/M6_NB2_Privacy_by_Design.ipynb
@@ -67,10 +67,10 @@
     "\n",
     "You can review the [seven principles of privacy by design](https://blog.varonis.com/privacy-design-cheat-sheet/), for more information.\n",
     "\n",
-    "\n",
-    "> **Note**: \n",
-    "\n",
-    "> It is strongly recommended that you \"save and checkpoint\" after applying significant changes or completing exercises. This allows you to return the notebook to a previous state should you wish to do so. On the Jupyter menu, select \"File\", then \"Save and Checkpoint\" from the dropdown menu that appears.\n"
+    "<div class=\"alert alert-warning\">\n",
+    "<b>Note</b>:<br>\n",
+    "It is strongly recommended that you save and checkpoint after applying significant changes or completing exercises. This allows you to return the notebook to a previous state should you wish to do so. On the Jupyter menu, select \"File\", then \"Save and Checkpoint\" from the dropdown menu that appears.\n",
+    "</div>"
    ]
   },
   {
@@ -118,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas\n",
@@ -126,7 +128,6 @@
     "# Load the data set.\n",
     "df = pandas.read_csv('privacy/belgium_100k.csv')\n",
     "df = df.where((pandas.notnull(df)), None)\n",
-    "#df['birthday'] = df['birthday'].astype('datetime64')\n",
     "df['birthday'] = df['birthday'].astype('datetime64[ns]')\n",
     "df.head()"
    ]
@@ -157,6 +158,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -170,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results indicate that 20% of the individuals could potentially be identified using two features (\"sex\" and \"birthday\"), and 99% of the population could potentially be reidentified using three features (\"sex\", \"birthday\", and \"zip\")."
+    "The results indicate that about 20% of the individuals could potentially be identified using two features (\"sex\" and \"birthday\"), and 99% of the population could potentially be reidentified using three features (\"sex\", \"birthday\", and \"zip\")."
    ]
   },
   {
@@ -197,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print((k_anonymity(df, ['sex', 'birthday', 'zip'])))"
@@ -243,7 +247,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Reduce the zip code to zip district.\n",
@@ -262,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# From birthday to birth year.\n",
@@ -281,7 +289,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# From birthday to birth decade.\n",
@@ -300,7 +310,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print((k_anonymity(df, ['sex', 'birth_year', 'zip_district'])))\n",
@@ -405,7 +417,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load required libraries and methods.\n",
@@ -420,7 +434,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load samples of the data set.\n",
@@ -443,7 +459,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Compute unicity.\n",
@@ -552,6 +570,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -726,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
